# xstatic-angular-material

./: .gitreview  LICENSE  README.rst  README.txt  setup.cfg  setup.py
xstatic/pkg/angular_material/: __init__.py
