[metadata]
name = XStatic-Angular-Material
description = Angular-Material 1.1.5 (XStatic packaging standard)
description-file = README.rst
maintainer = xinni.ge
maintainer-email = xinni.ge@ntt.com
home-page = https://github.com/angular/material
keywords = angular_material xstatic
license = MIT
zip_safe = False

[bdist_wheel]
universal = True
